# mklhelper

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
recipe/: recipe.yaml  variant_config.yaml
src/: mklhelper_cblas.h  mklhelper_ext.cpp
src/mklhelper/: __init__.py
tests/: test_gemm.py  test_trsm.py
