[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "mklhelper"
version = "0.0.1"
description = "Python bindings for Intel MKL BLAS"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Christopher Hillenbrand", email = "chillenbrand15@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]



[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"