[build-system]
requires = ["scikit-build-core[pyproject]", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "mklhelper"
version = "0.0.1"
description = "Python bindings for Intel MKL BLAS"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Christopher Hillenbrand", email = "chillenbrand15@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]



[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
cmake.verbose = true
